current primary model update

--- a/Primary Model.ipynb
+++ b/Primary Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 938,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 921,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     "    def calculate_reward(self, candidate):\n",
     "        \"\"\" calculate, but do not award, the reward function \"\"\"\n",
     "        dist = self.calculate_distance(candidate)\n",
-    "        rwd = 0.25 - dist**2\n",
+    "        rwd = 0.5 - dist**2\n",
     "        \n",
     "        return rwd\n",
     "    \n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 922,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 936,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 924,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 937,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -283,7 +283,7 @@
       "Voter(GreedyVoter, P, 2, 1, 0) Candidate(C, 35, 34, 0)\n",
       "Voter(GreedyVoter, Q, 0, 0, 0) Candidate(C, 35, 34, 0)\n",
       "Voter(GreedyVoter, R, 3, 4, 0) Candidate(C, 35, 34, 0)\n",
-      "Voter(CenterInformedVoter, S, 5.5, 4, 0) None\n",
+      "Voter(CenterInformedVoter, S, 5.5, 4, 0) Candidate(B, 5, 4, 0)\n",
       "Voter(CenterInformedVoter, T, 1.5, 4, 0) None\n",
       "Voter(CenterInformedVoter, U, 0, 4, 0) None\n",
       "Voter(CenterInformedVoter, V, 0, 0, 0) None\n"
@@ -348,7 +348,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 925,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "voterchoice = {\"A\": 3, \"B\": 5, \"C\": 2}\n",
+    "remaining_candidates = voterchoice\n",
+    "lowest = min(remaining_candidates, key=remaining_candidates.get)\n",
+    "remaining_candidates.pop(lowest)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +386,8 @@
     "    push an extreme option to the top who will not win the general election\n",
     "    \n",
     "    The MischiefVoter runs an analysis of the top 3 options and runs a \n",
-    "    short process to analyze if an extreme option (dist farther) can \n",
-    "    be pushed to the top 2, thus negating the\n",
+    "    short process to analyze if an extreme option (out of 3) can \n",
+    "    be pushed to the top 2, the other has a better chance of winning\n",
     "    '''\n",
     "    \n",
     "    def __init__(self, pol_x: float, pol_y: float, name):\n",
@@ -370,6 +398,19 @@
     "        \n",
     "        PrimaryOptimizingVoter.__init__(self, pol_x, pol_y, name)\n",
     "        self.voter_type = 'MischiefVoter'\n",
+    "\n",
+    "        \n",
+    "#     def _recalibrate(self, voterchoice, candidates):\n",
+    "#         # original voter choice migrates to next closest candidate\n",
+    "#         # elimination rounds\n",
+    "        \n",
+    "#         remaining_candidates = voterchoice\n",
+    "        \n",
+    "#         while len(remaining_candidates) > 3:\n",
+    "#             # get index of lowest candidate\n",
+    "#             lowest = min(remaining_candidates, key=remaining_candidates.get)\n",
+    "#             transfer = remaining_candidates.pop(lowest)\n",
+    "        \n",
     "\n",
     "\n",
     "    def vote_choice(self, candidatelist, voterchoice):\n",
@@ -395,29 +436,24 @@
     "\n",
     "        self.candidate_choice = None # reset\n",
     "        \n",
-    "        print(chigh3)\n",
-    "        print(vhigh)\n",
-    "        \n",
     "        for i in vhigh:\n",
     "            for j in chigh3:\n",
     "                if i[0] == j[0]:\n",
-    "                    self.candidate_choice = i\n",
-    "                    print(self.candidate_choice)\n",
-    "                    return\n",
-    "        \n",
-    "        # not in top 3\n",
-    "        \n",
+    "                    self.candidate_choice = i[0]\n",
+    "#                     print(self.candidate_choice)\n",
+    "                    return i[0]\n",
+    "                \n",
     "        for i in vhigh:\n",
     "            for j in chigh:\n",
     "                if i[0] == j[0]:\n",
-    "                    self.candidate_choice = i\n",
-    "                    print(self.candidate_choice)\n",
-    "                    return\n"
+    "                    self.candidate_choice = i[0]\n",
+    "#                     print(self.candidate_choice)\n",
+    "                    return i[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 933,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -427,9 +463,9 @@
     "\n",
     "class Runner(object):\n",
     "    def __init__(self,\n",
-    "                 n_greedy=30, n_optimizing=5, n_center=30, dist_type_v=\"normal\", dist_type_c=\"normal\",\n",
+    "                 n_greedy=300, n_optimizing=500, n_center=300, dist_type_v=\"uniform\", dist_type_c=\"uniform\",\n",
     "                 reelection=.75, c_min = 2, c_max = 10,\n",
-    "                 alpha=0.0375, mu=0, mu_2 = 0, delta=0.025, sigma=0.1, c_lambda=1, run_steps=250, seed=500):\n",
+    "                 alpha=0.0375, mu=0, mu_2 = 0, delta=0.025, sigma=0.1, c_lambda=1, run_steps=100, seed=500):\n",
     "        \n",
     "        self.n_voters = n_greedy + n_optimizing + n_center\n",
     "        self.n_greedy = n_greedy\n",
@@ -467,7 +503,7 @@
     "        if dist_type ==\"bimodal_normal\":\n",
     "            voter_dist_a = np.random.normal(self.mu, self.sigma, (math.floor(n_voters/2), 2))\n",
     "            voter_dist_b = np.random.normal(self.mu, self.sigma, (math.ceil(n_voters/2), 2))\n",
-    "            return voter_dist\n",
+    "            return np.concatenate((voter_dist_a, voter_dist_b), axis=0)\n",
     "        \n",
     "    def generate_candidates(self, dist_type):\n",
     "        pass\n",
@@ -547,6 +583,7 @@
     "    def _make_new_candidates(self, c_min, c_max, dist_type, reelection):\n",
     "        \n",
     "        n_candidates = np.random.randint(2, 11)\n",
+    "#         n_candidates = 4\n",
     "        \n",
     "        reelection = np.random.choice((0,1), n_candidates, p=(1-reelection, reelection))\n",
     "        \n",
@@ -606,16 +643,28 @@
     "        for v in self.voters:\n",
     "            v.reward(winner)\n",
     "    \n",
-    "    def run_voting(self):\n",
+    "    def run(self):\n",
     "        for i in range(self.run_steps):\n",
-    "            self.vote_cycle()"
+    "            self.vote_cycle()\n",
+    "    \n",
+    "    def aggregate_scores(self):\n",
+    "        \n",
+    "        optimizers = [i.current_score() for i in self.voters if i.voter_type == \"PrimaryOptimizingVoter\"]\n",
+    "        greedy = [i.current_score() for i in self.voters if i.voter_type == \"GreedyVoter\"]\n",
+    "        center = [i.current_score() for i in self.voters if i.voter_type == \"CenterInformedVoter\"]\n",
+    "\n",
+    "        optimizer_avg = sum(optimizers) / len(optimizers)\n",
+    "        greedy_avg = sum(greedy) / len(greedy)\n",
+    "        center_avg = sum(center) / len(center)\n",
+    "        \n",
+    "        return optimizer_avg, greedy_avg, center_avg\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -624,7 +673,7 @@
        "[(Candidate(A, 3, 2, 0), 1), (Candidate(B, 5, 4, 0), 1)]"
       ]
      },
-     "execution_count": 872,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 873,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +693,7 @@
        "list"
       ]
      },
-     "execution_count": 873,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 934,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -685,75 +734,10 @@
     {
      "data": {
       "text/plain": [
-       "array([Voter(PrimaryOptimizingVoter, ov0, -0.03773635807313359, 0.016675891737697457, 52.16670156611491),\n",
-       "       Voter(PrimaryOptimizingVoter, ov1, 0.06828023755711501, 0.1921378773231573, 37.010259314640734),\n",
-       "       Voter(PrimaryOptimizingVoter, ov2, -0.01970367959145205, -0.07598787572506799, 51.835663951285824),\n",
-       "       Voter(PrimaryOptimizingVoter, ov3, -0.20890663586299688, -0.003637298519150442, 46.47644576860744),\n",
-       "       Voter(PrimaryOptimizingVoter, ov4, -0.12177491820699736, -0.14289051207848266, 48.170915674857596),\n",
-       "       Voter(GreedyVoter, gv0, -0.017052761501063936, 0.11609400157081223, 47.25142656181789),\n",
-       "       Voter(GreedyVoter, gv1, -0.10611399612574113, -0.1408500171343385, 48.76643473791225),\n",
-       "       Voter(GreedyVoter, gv2, 0.08395500106323275, -0.009962477095586024, 47.95297507565488),\n",
-       "       Voter(GreedyVoter, gv3, -0.17362649103280542, -0.030718603772183762, 49.05417636234323),\n",
-       "       Voter(GreedyVoter, gv4, -0.008087031047443679, 0.08343191229557724, 49.14442795426171),\n",
-       "       Voter(GreedyVoter, gv5, 0.18854600845960612, 0.0440897700140053, 36.86838569009597),\n",
-       "       Voter(GreedyVoter, gv6, 0.04398743070972315, 0.1070766736658775, 45.85368542378021),\n",
-       "       Voter(GreedyVoter, gv7, 0.040425215687859214, 0.01334717384973757, 50.11966479816872),\n",
-       "       Voter(GreedyVoter, gv8, 0.19371074188546314, 0.1002275408111006, 33.449401666090516),\n",
-       "       Voter(GreedyVoter, gv9, -0.004699975221186654, 0.11532596917076901, 47.04716682147342),\n",
-       "       Voter(GreedyVoter, gv10, 0.001998546614871466, -0.15799304484582716, 47.676931341705384),\n",
-       "       Voter(GreedyVoter, gv11, -0.019784228044819725, -0.022019564878869285, 52.42525591665137),\n",
-       "       Voter(GreedyVoter, gv12, -0.02670838889303801, -0.04121303388285838, 52.48533949822421),\n",
-       "       Voter(GreedyVoter, gv13, 0.10495448212586869, 0.166377712878287, 37.11237945370959),\n",
-       "       Voter(GreedyVoter, gv14, 0.060363302565224077, 0.023145179724074025, 48.86792912753041),\n",
-       "       Voter(GreedyVoter, gv15, 0.03684036082568309, -0.049789434173768465, 50.56717023486066),\n",
-       "       Voter(GreedyVoter, gv16, 0.15674522734734198, 0.046914531278727606, 40.350896173857144),\n",
-       "       Voter(GreedyVoter, gv17, 0.0545376609162038, -0.03311972447146723, 49.81416345902394),\n",
-       "       Voter(GreedyVoter, gv18, -0.09601124944014172, -0.08541842746422434, 51.39169743786976),\n",
-       "       Voter(GreedyVoter, gv19, 0.16766913111981074, -0.046134457042602765, 40.46013431844556),\n",
-       "       Voter(GreedyVoter, gv20, 0.025337952320180962, 0.0760321744238649, 48.51295106303252),\n",
-       "       Voter(GreedyVoter, gv21, 0.028397049403921976, -0.04698247592358845, 50.95764712077554),\n",
-       "       Voter(GreedyVoter, gv22, -0.07610154136503161, 0.12273143571080836, 46.949549730989496),\n",
-       "       Voter(GreedyVoter, gv23, 0.00210386753858792, 0.011294002867485149, 51.579999162332555),\n",
-       "       Voter(GreedyVoter, gv24, 0.06367758786685584, -0.06573194850812034, 48.94023956651861),\n",
-       "       Voter(GreedyVoter, gv25, 0.05699596176149429, 0.09492927030274162, 45.96032208987183),\n",
-       "       Voter(GreedyVoter, gv26, 0.10578585126470529, 0.060393505121341166, 44.4967318589273),\n",
-       "       Voter(GreedyVoter, gv27, 0.0008751924064028277, 0.005517092830694616, 51.71622681489738),\n",
-       "       Voter(GreedyVoter, gv28, 0.08955922391271715, 0.09633195663403642, 43.82088652005235),\n",
-       "       Voter(GreedyVoter, gv29, 0.003699773303282493, 0.12604925961996385, 46.03443516363999),\n",
-       "       Voter(CenterInformedVoter, cv0, -0.07765059253338977, 0.0764745787903629, 49.86376404918391),\n",
-       "       Voter(CenterInformedVoter, cv1, 0.0394545008941507, 0.010563506547513103, 50.219195460482574),\n",
-       "       Voter(CenterInformedVoter, cv2, 0.01681282997534073, -0.009076715561394066, 51.410248178496346),\n",
-       "       Voter(CenterInformedVoter, cv3, 0.011894097785142776, 0.10995618876241448, 46.95443173551823),\n",
-       "       Voter(CenterInformedVoter, cv4, -0.10514698746948128, 0.07576351618815791, 49.37028881184282),\n",
-       "       Voter(CenterInformedVoter, cv5, 0.1345002096703362, -0.0816321169353909, 43.19097693974934),\n",
-       "       Voter(CenterInformedVoter, cv6, 0.09924830600416856, 0.04924202363902713, 45.461865603869015),\n",
-       "       Voter(CenterInformedVoter, cv7, 0.0936222355257668, 0.1138866584044175, 42.36613247897445),\n",
-       "       Voter(CenterInformedVoter, cv8, 0.07061381701590981, -0.1002387066031812, 47.561715323477756),\n",
-       "       Voter(CenterInformedVoter, cv9, -0.1810058547497819, -0.01873113346712219, 48.580016649069485),\n",
-       "       Voter(CenterInformedVoter, cv10, 0.10040613241522399, -0.004657435748513351, 46.707388039167796),\n",
-       "       Voter(CenterInformedVoter, cv11, -0.1019231421953434, 0.042856178161471394, 50.87547928003288),\n",
-       "       Voter(CenterInformedVoter, cv12, -0.02585054673067849, 0.009307338650205008, 52.18975541221207),\n",
-       "       Voter(CenterInformedVoter, cv13, -0.09922868293420674, -0.03072116311279365, 52.16379768284636),\n",
-       "       Voter(CenterInformedVoter, cv14, -0.04956371651121829, -0.07934623797952813, 52.02264296963618),\n",
-       "       Voter(CenterInformedVoter, cv15, 0.1346737256817443, 0.2695359881149074, 21.901746549994836),\n",
-       "       Voter(CenterInformedVoter, cv16, -0.08852278786357733, 0.15847317857277554, 43.76762914365751),\n",
-       "       Voter(CenterInformedVoter, cv17, -0.21525852635850873, 0.07434987912404654, 43.53124544023912),\n",
-       "       Voter(CenterInformedVoter, cv18, 0.10479415193847877, 0.18651226042955452, 35.07483655960258),\n",
-       "       Voter(CenterInformedVoter, cv19, -0.033757192370359505, 0.08867604092299954, 49.25703868877135),\n",
-       "       Voter(CenterInformedVoter, cv20, -0.16790452632665964, 0.09816709397137019, 45.465218749973246),\n",
-       "       Voter(CenterInformedVoter, cv21, 0.05637623386462302, -0.05877156517259139, 49.474229261300316),\n",
-       "       Voter(CenterInformedVoter, cv22, 0.10987880681698259, -0.16222909653447715, 41.52826963322782),\n",
-       "       Voter(CenterInformedVoter, cv23, -0.02184218382163418, -0.11911550466072603, 50.3529699227477),\n",
-       "       Voter(CenterInformedVoter, cv24, 0.03590395512912929, 0.08975349357270807, 47.31672976366199),\n",
-       "       Voter(CenterInformedVoter, cv25, 0.03857039951754813, -0.019505286689383106, 50.60156756420142),\n",
-       "       Voter(CenterInformedVoter, cv26, 0.03979537476182977, 0.15450156523426004, 42.30583800781441),\n",
-       "       Voter(CenterInformedVoter, cv27, -0.007398508953726044, -0.2789596002143319, 36.343678336581405),\n",
-       "       Voter(CenterInformedVoter, cv28, 0.011259322671478647, 0.10416090406461027, 47.36391810721041),\n",
-       "       Voter(CenterInformedVoter, cv29, 0.12479486721314506, 0.06403592048753091, 42.73595252632027)],\n",
-       "      dtype=object)"
+       "(-95.23877878697743, -99.24173392636852, -94.16827195318683)"
       ]
      },
-     "execution_count": 934,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,10 +745,10 @@
    "source": [
     "j = Runner()\n",
     "j.get_voters()\n",
-    "j.run_voting()\n",
+    "j.run()\n",
     "# j.candidates\n",
     "j.get_voters()\n",
-    "\n",
+    "j.aggregate_scores()\n",
     "# j.voters\n",
     "\n",
     "# j.process_all_voters(j.voters, j.candidates)\n",
@@ -774,16 +758,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.004699975221186654"
+       "0.850332236544949"
       ]
      },
-     "execution_count": 783,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
