old model updates

--- a/Primary Model 20220103.ipynb
+++ b/Primary Model 20220103.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -562,11 +562,7 @@
     "\n",
     "        return len(self.candidates)\n",
     "    \n",
-    "    def _calculate_distance(self, x: float, y: float, pol_x: float, pol_y: float):\n",
-    "        \"\"\" calculate the distance between two (x,y) points \"\"\"\n",
-    "        distance = ( (x - pol_x)**2 + (y - pol_y)**2 )**(0.5)\n",
-    "        return distance\n",
-    "        \n",
+    "\n",
     "    def process_all_voters(self, voters, candidates):\n",
     "        \"\"\"\n",
     "        :param voters: list of all voter instances\n",
@@ -577,7 +573,7 @@
     "        ls = [0] * len(candidates)\n",
     "        for v in voters:\n",
     "            choice = None\n",
-    "            scores = [self._calculate_distance(v.pol_x, v.pol_y, c.pol_x, c.pol_y) for c in candidates]\n",
+    "            scores = [_calculate_distance(v.pol_x, v.pol_y, c.pol_x, c.pol_y) for c in candidates]\n",
     "            index_min = np.argmin(scores)\n",
     "            ls[index_min] = ls[index_min] + 1\n",
     "\n",
@@ -661,7 +657,7 @@
     "        greedy_avg = sum(greedy) / len(greedy)\n",
     "        center_avg = sum(center) / len(center)\n",
     "        \n",
-    "        return optimizer_avg, greedy_avg, center_avg"
+    "        return optimizer_avg, greedy_avg, center_avg\n"
    ]
   },
   {
