--- a/MEDSL_parse.ipynb
+++ b/MEDSL_parse.ipynb
@@ -249,6 +249,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "283c0e64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R    906\n",
+       "D    816\n",
+       "Name: Party, dtype: int64"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "house_scores.describe()\n",
+    "house_scores[\"Party\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c277aca0",
    "metadata": {},
@@ -257,7 +281,7 @@
     "\n",
     "Question: did I merge the house and senate?\n",
     "\n",
-    "I thinki"
+    "They are on separate sheets"
    ]
   },
   {
@@ -428,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "5ffd5167",
+   "id": "d3046b2e",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "3718abdd",
+   "id": "f37e4847",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "22727fa2",
+   "id": "40c1fcd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "c7aac4fc",
+   "id": "732e1fdc",
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2255,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "faed588e",
+   "id": "99a83d87",
    "metadata": {},
    "outputs": [
     {
@@ -2261,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "07c9822d",
+   "id": "843f5ab8",
    "metadata": {
     "scrolled": true
    },
@@ -2286,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "4e2e331e",
+   "id": "65a8a2b6",
    "metadata": {},
    "outputs": [
     {
@@ -2310,7 +2334,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "29800dd2",
+   "id": "9e099159",
    "metadata": {},
    "outputs": [
     {
@@ -2435,8 +2459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "3dacab20",
+   "execution_count": 142,
+   "id": "8147f852",
    "metadata": {},
    "outputs": [
     {
@@ -2902,7 +2926,7 @@
        "1186          119803      245277          False  0.488440  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2910,6 +2934,138 @@
    "source": [
     "winners.sort_values(by=[\"margin\"])[:30]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "9c5d609d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>district</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>margin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1743.000000</td>\n",
+       "      <td>1743.000000</td>\n",
+       "      <td>1743.000000</td>\n",
+       "      <td>1743.000000</td>\n",
+       "      <td>1742.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2014.979920</td>\n",
+       "      <td>10.149168</td>\n",
+       "      <td>164428.159495</td>\n",
+       "      <td>255448.516351</td>\n",
+       "      <td>0.655764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.287878</td>\n",
+       "      <td>10.641189</td>\n",
+       "      <td>49461.499251</td>\n",
+       "      <td>75636.746726</td>\n",
+       "      <td>0.118416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2002.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.274997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>132785.000000</td>\n",
+       "      <td>204918.500000</td>\n",
+       "      <td>0.573151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>166784.000000</td>\n",
+       "      <td>261812.000000</td>\n",
+       "      <td>0.634351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2016.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>198531.000000</td>\n",
+       "      <td>310968.500000</td>\n",
+       "      <td>0.714683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2018.000000</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>329800.000000</td>\n",
+       "      <td>507831.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              year     district  candidatevotes     totalvotes       margin\n",
+       "count  1743.000000  1743.000000     1743.000000    1743.000000  1742.000000\n",
+       "mean   2014.979920    10.149168   164428.159495  255448.516351     0.655764\n",
+       "std       2.287878    10.641189    49461.499251   75636.746726     0.118416\n",
+       "min    2002.000000     0.000000        0.000000       0.000000     0.274997\n",
+       "25%    2012.000000     3.000000   132785.000000  204918.500000     0.573151\n",
+       "50%    2014.000000     6.000000   166784.000000  261812.000000     0.634351\n",
+       "75%    2016.000000    13.000000   198531.000000  310968.500000     0.714683\n",
+       "max    2018.000000    53.000000   329800.000000  507831.000000     1.000000"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "winners.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86b90637",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2944,6 +3100,219 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a047d663",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PC\\OneDrive - Georgetown University\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd \"C:/Users/PC/OneDrive - Georgetown University\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f5d95f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>district</th>\n",
+       "      <th>year</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>margin</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Congress</th>\n",
+       "      <th>First Year</th>\n",
+       "      <th>Years in Office</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1683.000000</td>\n",
+       "      <td>1683.000000</td>\n",
+       "      <td>1683.000000</td>\n",
+       "      <td>1683.000000</td>\n",
+       "      <td>1682.000000</td>\n",
+       "      <td>1683.000000</td>\n",
+       "      <td>1683.000000</td>\n",
+       "      <td>1683.000000</td>\n",
+       "      <td>1683.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10.223411</td>\n",
+       "      <td>2015.032680</td>\n",
+       "      <td>164479.961973</td>\n",
+       "      <td>255920.408200</td>\n",
+       "      <td>0.654744</td>\n",
+       "      <td>-0.093204</td>\n",
+       "      <td>114.516340</td>\n",
+       "      <td>2007.339275</td>\n",
+       "      <td>8.693405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10.719591</td>\n",
+       "      <td>2.233834</td>\n",
+       "      <td>49040.703864</td>\n",
+       "      <td>75211.692164</td>\n",
+       "      <td>0.117275</td>\n",
+       "      <td>0.774775</td>\n",
+       "      <td>1.116917</td>\n",
+       "      <td>9.072874</td>\n",
+       "      <td>8.807284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.274997</td>\n",
+       "      <td>-1.782000</td>\n",
+       "      <td>113.000000</td>\n",
+       "      <td>1965.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>133171.500000</td>\n",
+       "      <td>206485.500000</td>\n",
+       "      <td>0.572780</td>\n",
+       "      <td>-0.624995</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>2003.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>2016.000000</td>\n",
+       "      <td>166714.000000</td>\n",
+       "      <td>262396.000000</td>\n",
+       "      <td>0.633447</td>\n",
+       "      <td>-0.205440</td>\n",
+       "      <td>115.000000</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>2018.000000</td>\n",
+       "      <td>198531.000000</td>\n",
+       "      <td>311358.500000</td>\n",
+       "      <td>0.712808</td>\n",
+       "      <td>0.309865</td>\n",
+       "      <td>116.000000</td>\n",
+       "      <td>2013.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>2018.000000</td>\n",
+       "      <td>329800.000000</td>\n",
+       "      <td>504421.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.839320</td>\n",
+       "      <td>116.000000</td>\n",
+       "      <td>2019.000000</td>\n",
+       "      <td>52.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          district         year  candidatevotes     totalvotes       margin  \\\n",
+       "count  1683.000000  1683.000000     1683.000000    1683.000000  1682.000000   \n",
+       "mean     10.223411  2015.032680   164479.961973  255920.408200     0.654744   \n",
+       "std      10.719591     2.233834    49040.703864   75211.692164     0.117275   \n",
+       "min       0.000000  2012.000000        0.000000       0.000000     0.274997   \n",
+       "25%       3.000000  2014.000000   133171.500000  206485.500000     0.572780   \n",
+       "50%       6.000000  2016.000000   166714.000000  262396.000000     0.633447   \n",
+       "75%      13.000000  2018.000000   198531.000000  311358.500000     0.712808   \n",
+       "max      53.000000  2018.000000   329800.000000  504421.000000     1.000000   \n",
+       "\n",
+       "             Score     Congress   First Year  Years in Office  \n",
+       "count  1683.000000  1683.000000  1683.000000      1683.000000  \n",
+       "mean     -0.093204   114.516340  2007.339275         8.693405  \n",
+       "std       0.774775     1.116917     9.072874         8.807284  \n",
+       "min      -1.782000   113.000000  1965.000000         0.000000  \n",
+       "25%      -0.624995   114.000000  2003.000000         2.000000  \n",
+       "50%      -0.205440   115.000000  2011.000000         6.000000  \n",
+       "75%       0.309865   116.000000  2013.000000        14.000000  \n",
+       "max       6.839320   116.000000  2019.000000        52.000000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel(\"house_winners_final.xlsx\")\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6756a591",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R    889\n",
+       "D    794\n",
+       "Name: party_short, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"party_short\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
